# simple-stack-interpreter

./: CMakeLists.txt  README.md
src/: interpreter.hpp  stack.hpp
test/: CMakeLists.txt  interpreter.cpp  interpreter.naive_factorial.txt  interpreter.test.cpp  main.test.cpp
